src/objects/Brackets_Match__c.object
<CustomObject>
    <fields>
        <fullName>Brackets_Round__c</fullName>
        <label>Round</label>
        <referenceTo>Brackets_Round__c</referenceTo>
        <relationshipLabel>Matches</relationshipLabel>
        <relationshipName>Matches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Conference__c</fullName>
        <inlineHelpText>If rounds are grouped in conferences, this is the conference the match is part of.</inlineHelpText>
        <label>Conference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Short description of the match</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowingBrackets_Match__c</fullName>
        <label>FollowingMatch</label>
        <referenceTo>Brackets_Match__c</referenceTo>
        <relationshipLabel>PreviousMatches</relationshipLabel>
        <relationshipName>PreviousMatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FollowingIsHome__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FollowingIsHome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeBrackets_Team__c</fullName>
        <label>Team 1</label>
        <referenceTo>Brackets_Team__c</referenceTo>
        <relationshipLabel>HomeMatches</relationshipLabel>
        <relationshipName>HomeMatch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HomePrediction__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HomePrediction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeScore__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Score of Team 1 after the match end.</inlineHelpText>
        <label>Team 1 Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Keep the position respect to its round, each position should be unique.</description>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <inlineHelpText>Date of the match</inlineHelpText>
        <label>Schedule</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitorBrackets_Team__c</fullName>
        <label>Team 2</label>
        <referenceTo>Brackets_Team__c</referenceTo>
        <relationshipLabel>VisitorMatches</relationshipLabel>
        <relationshipName>VisitorMatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitorPrediction__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VisitorPrediction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitorScore__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Score of Team 2 after the match end.</inlineHelpText>
        <label>Team 2 Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WinnerBrackets_Team__c</fullName>
        <inlineHelpText>Match winner (Team 1 or Team 2)</inlineHelpText>
        <label>Winner Team</label>
        <referenceTo>Brackets_Team__c</referenceTo>
        <relationshipLabel>WinnerMatches</relationshipLabel>
        <relationshipName>WinnerMatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Match</label>
    <listViews>
        <fullName>All</fullName>
        <columns>HomeBrackets_Team__c</columns>
        <columns>HomeScore__c</columns>
        <columns>VisitorBrackets_Team__c</columns>
        <columns>VisitorScore__c</columns>
        <columns>VisitorPrediction__c</columns>
        <columns>isLocked__c</columns>
        <columns>Position__c</columns>
        <columns>FollowingBrackets_Match__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MA-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Conference_read_only</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED( Conference__c  )</errorConditionFormula>
        <errorDisplayField>Conference__c</errorDisplayField>
        <errorMessage>This field is not updatable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DifferentTeams</fullName>
        <active>true</active>
        <description>The home and visitor teams must be different teams</description>
        <errorConditionFormula>AND(AND(NOT( ISBLANK( VisitorBrackets_Team__c ) ),NOT( ISBLANK( HomeBrackets_Team__c ) )),HomeBrackets_Team__c = VisitorBrackets_Team__c)</errorConditionFormula>
        <errorMessage>Team 1 and Team 2 must be different</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PositiveScores</fullName>
        <active>true</active>
        <description>Scores must be a positive numbers</description>
        <errorConditionFormula>HomeScore__c &lt; 0 ||  VisitorScore__c &lt; 0</errorConditionFormula>
        <errorMessage>The score must be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ScheduleAfterDeadlineRound</fullName>
        <active>true</active>
        <errorConditionFormula>And ( 
!isBlank(Schedule__c),
!isBlank(Brackets_Round__r.Deadline__c),
Schedule__c &lt; Brackets_Round__r.Deadline__c
)</errorConditionFormula>
        <errorDisplayField>Schedule__c</errorDisplayField>
        <errorMessage>This date must be greater than the round&apos;s deadline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scores_can_not_be_null</fullName>
        <active>true</active>
        <description>If the Winner Team is establish, the scores can not be null or empty</description>
        <errorConditionFormula>!ISNULL( WinnerBrackets_Team__c ) &amp;&amp; 
(  !ISNUMBER( TEXT(VisitorScore__c) )  ||  !ISNUMBER( TEXT(HomeScore__c))  )</errorConditionFormula>
        <errorDisplayField>WinnerBrackets_Team__c</errorDisplayField>
        <errorMessage>Scores can not be null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scores_with_no_winner</fullName>
        <active>true</active>
        <description>Avoid to set scores when the Winner team is not established.</description>
        <errorConditionFormula>(HomeScore__c &gt; 0 || VisitorScore__c &gt; 0) &amp;&amp; WinnerBrackets_Team__c == null</errorConditionFormula>
        <errorDisplayField>WinnerBrackets_Team__c</errorDisplayField>
        <errorMessage>Select the Winner Team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WinnerTeamGreaterScoreThanOpponent</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK( WinnerBrackets_Team__c),false,
      OR( 
             AND( 
                   WinnerBrackets_Team__c ==  HomeBrackets_Team__c,HomeScore__c &lt;=  VisitorScore__c
              ),
             AND( 
              WinnerBrackets_Team__c ==  VisitorBrackets_Team__c,HomeScore__c &gt;= VisitorScore__c )
      )
)</errorConditionFormula>
        <errorDisplayField>WinnerBrackets_Team__c</errorDisplayField>
        <errorMessage>A Winner must have an score greater than its opponent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WinnerTeamSubset</fullName>
        <active>true</active>
        <description>The winner team can be empty or must be the Team 1 or Team 2</description>
        <errorConditionFormula>WinnerBrackets_Team__c &lt;&gt; &quot;&quot; &amp;&amp;
WinnerBrackets_Team__c &lt;&gt;  HomeBrackets_Team__c  &amp;&amp;
WinnerBrackets_Team__c &lt;&gt;  VisitorBrackets_Team__c</errorConditionFormula>
        <errorDisplayField>WinnerBrackets_Team__c</errorDisplayField>
        <errorMessage>The winner must be the Team 1 or the Team 2</errorMessage>
    </validationRules>
</CustomObject>